# joshbduncan.com

./: .gitignore  .prettierrc  404.html  AGENTS.md  CHANGLOG.md  Makefile  README.md  about.html  blog.py  categories.html  categories.json  checking-linked-records-in-airtable.html  config.py  flask-flatpages-rss.html  flask-flatpages-sitemap.html  imgspecs.sh  index.html  javascript-search-token-highlighter.html  macos_chrome_autofill_security_codes.html  markdown.html  package-lock.json  posts.json  pyproject.toml  python-custom-sorting.html  python-progress-spinners-using-generators.html  python-type-hints-and-banners.html  requirements-build.txt  requirements-dev.txt  requirements-github.txt  requirements.txt  robots.txt  rss.html  rss.xml  run  saving-preferences-in-adobe-extendscript.html  search-and-filter-html-table-data-with-javascript.html  search.html  search.json  sitemap.xml  software.html  (+5 more)
.github/workflows/: build.yml
app/: __init__.py  config.py  md_callouts.py  md_extensions.py  routes.py
app/flask_frozen/: __init__.py
app/markdown_div/: __init__.py  extension.py
app/md_alerts/: __init__.py  extension.py
category/: development.html  productivity.html
drafts/: index.html
static/: styles.css
tag/: adobe.html  airtable.html  automation.html  chrome.html  cli.html  extendscript.html  filter.html  flask-flatpages.html  flask.html  generators.html  html.html  javascript.html  jinja.html  keyboard maestro.html  keyboard-maestro.html  mac.html  macos.html  productivity.html  python.html  search.html  sort.html  sorting.html  type-hints.html
(+63 files in other folders)
